fixed line wrapping bug in code

--- a/content/themes/g-rain/assets/css/screen.scss
+++ b/content/themes/g-rain/assets/css/screen.scss
@@ -293,7 +293,7 @@ pre code {
   background: #333;
 }
 
-code span {
+code .at_rule {
   white-space: nowrap;
 }
 
